# WanPlayer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: discord.rs  executor.rs  gensokyo_radio.rs  main.rs  pipeline.rs  ui.rs  widget.rs
