[package]
name = "wan_player"
version = "0.1.0"
authors = ["Flat Bartender <flat.bartender@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true 

[dependencies]
minimp3 = {features = ["async_tokio"], version = "0.5"}
cpal = "0.13"
tokio = {features = ["full"], version = "1"}
hyper = {features = ["http1", "stream"], version = "0.14"}
hyper-tls = "0.5"
ringbuf = "0.2"
serde_json = "1.0"
serde = {features = ["derive"], version = "1.0"}
futures-util = "*"
iced = {features = ["image", "svg"], version = "0.2"}
iced_native = "*"
iced_graphics = "*"
discord_game_sdk = "1.0.1"
